# DBSAnnotator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.py  settings.json
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  docs-health.yml  docs-screenshots.yml  prepare-release.yml  release-drafter.yml  release.yml
config/: clinical_presets.json
docs/: conf.py  contributing.rst  faq.rst  index.rst  installation.rst  output_format.rst  quickstart.rst  releasing.rst  workflow_annotations.rst  workflow_longitudinal.rst  workflow_session.rst
docs/_generated/: tsv_schema.inc.rst
icons/: logoneutral.icns
newsfragments/: 71.added.md  76.changed.md  76.fixed.md  77.fixed.md  78.fixed.md  79.fixed.md  80.fixed.md  README.md  docs-p15-p2.docs.md  template.md.jinja
scripts/: Install-DBSAnnotator.ps1  build_app_icons.py  build_macos.py  build_windows.py  build_windows_nuitka.py  create_installer.nsi  docs_health_report.py  generate_tsv_schema_docs.py  install.ps1  install.sh  make_macOS_logo.sh  release_prepare.py  release_versioning.py
scripts/installer/: ClinicalDBSAnnot.iss
src/clinical_dbs_annotator/: __init__.py  __main__.py  config.py  config_electrode_models.py  logging_config.py  version.py
src/clinical_dbs_annotator/config/: clinical_presets.json
src/clinical_dbs_annotator/controllers/: wizard_controller.py
src/clinical_dbs_annotator/models/: __init__.py  electrode_viewer.py  session_data.py  stimulation.py
src/clinical_dbs_annotator/ui/: __init__.py  amplitude_split_widget.py  clinical_scales_settings_dialog.py  file_loader.py  multiselect_combo.py  widgets.py
src/clinical_dbs_annotator/utils/: graphics.py  longitudinal_exporter.py  program_config_manager.py  report_chart_utils.py  responsive.py  scale_preset_manager.py  session_exporter.py  theme_manager.py
src/clinical_dbs_annotator/views/: __init__.py  annotation_only_view.py  annotations_simple_view.py  base_view.py  export_dialog.py  longitudinal_file_view.py  longitudinal_report_view.py  longitudinal_scale_dialog.py  step0_view.py  step1_view.py  step2_view.py  step3_view.py  wizard_window.py
src/dbs_annotator/: __init__.py  __main__.py  config.py  config_electrode_models.py  logging_config.py  version.py
src/dbs_annotator/config/: session_scales_presets.json
src/dbs_annotator/controllers/: __init__.py  wizard_controller.py
src/dbs_annotator/models/: __init__.py  clinical_scale.py  session_data.py  stimulation.py
src/dbs_annotator/ui/: __init__.py  amplitude_split_widget.py  clinical_scales_settings_dialog.py  session_scales_settings_dialog.py  widgets.py
src/dbs_annotator/utils/: __init__.py  graphics.py  longitudinal_exporter.py  program_config_manager.py  report_chart_utils.py  resources.py  scale_preset_manager.py  session_exporter.py  updater.py  user_data.py
src/dbs_annotator/views/: __init__.py  annotation_only_view.py  export_dialog.py  longitudinal_report_view.py  step0_view.py  step1_view.py  wizard_window.py
src/logs/: program_names.json  scale_presets.json
styles/: dark_theme.qss  light_theme.qss
tests/: README.md  __init__.py  conftest.py
tests/docs/: test_docs_screenshots.py
tests/integration/: test_export_integration.py  test_full_workflow.py  test_wizard_navigation_extra.py
tests/performance/: test_export_performance.py
tests/ui/: __init__.py
tests/unit/: __init__.py  test_bids_naming.py  test_config_electrode_models.py  test_electrode_canvas.py  test_export_dialog_qt.py  test_logging_config.py  test_longitudinal_exporter_static.py  test_main_entry.py  test_models.py  test_release_versioning.py  test_report_chart_utils.py  test_resources.py  test_session_data.py  test_session_data_extended.py  test_session_exporter.py  test_session_exporter_helpers.py  test_session_exporter_open_and_footer.py  test_step_views_validation_paths.py  test_utils.py  test_version.py  test_views_basic.py  test_wizard_controller.py  test_wizard_controller_extended.py
