[project]
name = "dbs-annotator"
description = "An application for annotating clinical programming sessions."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Lucia Poma", email = "lucia.poma@wysscenter.ch" },
    { name = "Matteo Vissani" },
    { name = "Richard Köhler", email = "richard.koehler@wysscenter.ch" },
]
keywords = [
    "dbs",
    "clinical",
    "annotation",
    "neuroscience",
    "deep-brain-stimulation",
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: OS Independent",
]
dependencies = [
    "tzdata>=2025.3",
    "pandas>=2.1",
    "python-docx>=1.1",
    "docx2pdf>=0.1.8",
    "pydantic>=2.0",
    "pyside6>=6.11.0",
    "matplotlib>=3.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6",
    "pre-commit-uv>=4.2.1",
    "ty>=0.0.29",
    "pandas-stubs>=3.0.0.260204",
    "pyside6-stubs>=6.7.3.0",
]
build = ["briefcase>=0.3.26"]
docs = ["sphinx>=9.0.4", "sphinx-rtd-theme>=3.1.0", "sphinx-copybutton>=0.5.2"]

[project.scripts]
dbs-annotator = "dbs_annotator.__main__:main"

[project.urls]
Homepage = "https://github.com/Brain-Modulation-Lab/App_ClinicalDBSAnnot"
Repository = "https://github.com/Brain-Modulation-Lab/App_ClinicalDBSAnnot"
Documentation = "https://app-clinicaldbsannot.readthedocs.io/en/latest/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/dbs_annotator/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dbs_annotator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--timeout=3",
    "--cov=dbs_annotator",
    "--cov-report=html",
    "--cov-report=term-missing",
]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "gui: Qt GUI / widget tests",
    "integration: cross-module behavior",
    "slow: longer GUI or lazy-loaded wizard flows; skip locally with pytest -m \"not slow\"",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
omit = ["*/tests/*"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".eggs", ".git", ".hatch", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]

[tool.uv]
exclude-newer = "1 week"

# BeeWare Briefcase: native installers (Windows MSI / macOS .app + DMG).
# App entrypoint: `python -m dbs_annotator` (see src/dbs_annotator/__main__.py).
# Project [project] metadata (version via Hatch, dependencies) is merged by Briefcase.
[tool.briefcase]
project_name = "DBS Annotator"
bundle = "ch.wysscenter.dbsannotator"
# Briefcase requires a static version here even when [project] uses dynamic version from Hatch.
version = "0.3.0"
license = { file = "LICENSE" }

[tool.briefcase.app.dbs_annotator]
formal_name = "DBSAnnotator"
description = "An application for annotating clinical programming sessions."
long_description = """
DBS Annotator is a desktop application used to structure and review
deep-brain stimulation programming sessions in a reproducible workflow.

It supports clinicians and researchers by organizing session information,
tracking stimulation settings, and generating standardized exports and reports.
"""
sources = ["src/dbs_annotator", "icons", "styles"]
icon = "icons/logoneutral"
installer_icon = "icons/logoneutral"
requirement_installer_args = [
    "--index-url",
    "https://pypi.org/simple",
    "--constraint",
    "constraints-briefcase.txt",
    "--retries",
    "5",
    "--timeout",
    "60",
    "--no-cache-dir",
]

[tool.briefcase.app.dbs_annotator.macOS]
universal_build = false
# PySide6 6.8+ publishes macOS wheels tagged `macosx_13_0_universal2`. The Briefcase
# support-package Python on macOS advertises a lower platform tag by default, so its
# embedded pip refuses all PySide6 versions newer than 6.7.3 with a misleading
# "No matching distribution" error. Setting `min_os_version = "13.0"` tells Briefcase
# (and the bundled interpreter/installer) to target macOS 13+, aligning platform tags
# with the published wheels. If a compatible support package is not available, Briefcase
# will select the closest one and raise the deployment target accordingly.
min_os_version = "13.0"
